--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,11 @@
         </activity>
         <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.CadastroActivity" />
-        <activity android:name=".activity.ContaActivity"></activity>
+        <activity
+            android:name=".activity.ContaActivity"
+            android:parentActivityName=".activity.MainActivity" />
+        <activity android:name=".activity.EditarInformacoesActivity"
+            android:parentActivityName=".activity.ContaActivity"/>
     </application>
 
 </manifest>
